@@ -64,6 +64,7 @@ version <next>:
 - HE-AAC v1 decoder
 - Kega Game Video (KGV1) decoder
 - VorbisComment writing for FLAC, Ogg FLAC and Ogg Speex files
+- RTP depacketization of Theora
 
 
 
